--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -170,7 +170,7 @@ a {
 
                     .l-navbar {
                                         left: 0;
-                                        padding: 1rem 1rem 0 0;
+                                        /* padding: 1rem 1rem 0 0; */
                     }
 
                     .show {
